--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tomato-bell",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "normalize.css": "^8.0.1",
