--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://kaidouya.github.io/tomato-bell",
   "dependencies": {
     "@material-ui/core": "^4.2.1",
+    "gh-pages": "^2.0.1",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
